--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "babel-register": "^6.7.2",
     "babel-runtime": "^6.6.1",
     "browser-sync": "^2.11.1",
-    "chai": "^3.4.0",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.19.0",
     "del": "^2.2.0",
     "eslint": "^2.11.1",
     "eslint-config-standard": "^5.3.1",
+    "eslint-plugin-angular": "^1.0.1",
     "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-standard": "^1.3.2",
     "fs-walk": "0.0.1",
@@ -33,19 +33,17 @@
     "gulp-template": "^3.0.0",
     "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^1.7.0",
+    "jasmine-core": "^2.4.1",
     "karma": "^0.13.9",
-    "karma-chai": "^0.1.0",
-    "karma-mocha": "^0.2.0",
-    "karma-mocha-reporter": "^1.0.2",
+    "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.4",
+    "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.5.1",
     "lodash": "^4.11.1",
-    "mocha": "^2.3.0",
     "ng-annotate-loader": "0.0.10",
     "node-libs-browser": "^0.5.0",
     "phantomjs": "^2.1.7",
-    "phantomjs-prebuilt": "^2.1.7",
     "raw-loader": "^0.5.1",
     "run-sequence": "^1.1.0",
     "style-loader": "^0.12.2",
