--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,7 @@
   "rules"  : {
     "semi": ["error", "always", { "omitLastInOneLineBlock": false }],
     "no-extra-semi": ["error"],
-//    "no-multi-spaces": ["error", { exceptions: { "VariableDeclarator": true } }]
-    "no-multi-spaces": ["error", { "exceptions":  { "ImportDeclaration": true, "VariableDeclarator": true } }]
+    "no-multi-spaces": ["error", { "exceptions":  { "ImportDeclaration": true, "VariableDeclarator": true } }],
+    "key-spacing": ["error", { "align": "colon" }]
   }
 }
