--- a/package.json
+++ b/package.json
@@ -1,71 +1,74 @@
 {
-  "name": "ng6-starter",
-  "version": "0.0.1",
-  "description": "Starter for Angular + ES6 + (Webpack or JSPM)",
-  "main": "index.js",
-  "dependencies": {
-    "angular": "^1.5.0",
+  "name"           : "ng6-starter",
+  "version"        : "0.0.1",
+  "description"    : "Starter for Angular + ES6 + (Webpack or JSPM)",
+  "main"           : "index.js",
+  "dependencies"   : {
+    "angular"          : "^1.5.0",
     "angular-ui-router": "^0.2.15",
-    "normalize.css": "^3.0.3"
+    "normalize.css"    : "^3.0.3"
   },
   "devDependencies": {
-    "angular-mocks": "^1.5.0",
-    "babel-core": "^6.7.7",
-    "babel-loader": "^6.2.4",
+    "angular-mocks"                 : "^1.5.0",
+    "babel-core"                    : "^6.7.7",
+    "babel-loader"                  : "^6.2.4",
     "babel-plugin-transform-runtime": "^6.7.5",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.7.2",
-    "babel-runtime": "^6.6.1",
-    "browser-sync": "^2.11.1",
-    "connect-history-api-fallback": "^1.1.0",
-    "css-loader": "^0.19.0",
-    "del": "^2.2.0",
-    "eslint": "^2.11.1",
-    "eslint-config-standard": "^5.3.1",
-    "eslint-plugin-angular": "^1.0.1",
-    "eslint-plugin-promise": "^1.3.2",
-    "eslint-plugin-standard": "^1.3.2",
-    "fs-walk": "0.0.1",
-    "gulp": "^3.9.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-template": "^3.0.0",
-    "gulp-util": "^3.0.7",
-    "html-webpack-plugin": "^1.7.0",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.9",
-    "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sourcemap-loader": "^0.3.4",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^1.5.1",
-    "lodash": "^4.11.1",
-    "ng-annotate-loader": "0.0.10",
-    "node-libs-browser": "^0.5.0",
-    "phantomjs": "^2.1.7",
-    "raw-loader": "^0.5.1",
-    "run-sequence": "^1.1.0",
-    "style-loader": "^0.12.2",
-    "stylus-loader": "^1.1.1",
-    "supports-color": "^3.1.2",
-    "webpack": "^1.9.5",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.6.0",
-    "yargs": "^3.9.0"
+    "babel-polyfill"                : "^6.7.4",
+    "babel-preset-es2015"           : "^6.6.0",
+    "babel-preset-stage-0"          : "^6.5.0",
+    "babel-register"                : "^6.7.2",
+    "babel-runtime"                 : "^6.6.1",
+    "browser-sync"                  : "^2.11.1",
+    "connect-history-api-fallback"  : "^1.1.0",
+    "css-loader"                    : "^0.19.0",
+    "del"                           : "^2.2.0",
+    "eslint"                        : "^2.11.1",
+    "eslint-config-standard"        : "^5.3.1",
+    "eslint-plugin-angular"         : "^1.0.1",
+    "eslint-plugin-promise"         : "^1.3.2",
+    "eslint-plugin-standard"        : "^1.3.2",
+    "fs-walk"                       : "0.0.1",
+    "gulp"                          : "^3.9.0",
+    "gulp-rename"                   : "^1.2.2",
+    "gulp-template"                 : "^3.0.0",
+    "gulp-util"                     : "^3.0.7",
+    "html-webpack-plugin"           : "^1.7.0",
+    "jasmine-core"                  : "^2.4.1",
+    "karma"                         : "^0.13.9",
+    "karma-jasmine"                 : "^1.0.2",
+    "karma-phantomjs-launcher"      : "^1.0.0",
+    "karma-sourcemap-loader"        : "^0.3.4",
+    "karma-spec-reporter"           : "0.0.26",
+    "karma-webpack"                 : "^1.5.1",
+    "lodash"                        : "^4.11.1",
+    "ng-annotate-loader"            : "0.0.10",
+    "node-libs-browser"             : "^0.5.0",
+    "phantomjs"                     : "^2.1.7",
+    "raw-loader"                    : "^0.5.1",
+    "run-sequence"                  : "^1.1.0",
+    "style-loader"                  : "^0.12.2",
+    "stylus-loader"                 : "^1.1.1",
+    "supports-color"                : "^3.1.2",
+    "webpack"                       : "^1.9.5",
+    "webpack-dev-middleware"        : "^1.6.1",
+    "webpack-hot-middleware"        : "^2.6.0",
+    "yargs"                         : "^3.9.0"
   },
-  "scripts": {
-    "test": "karma start config/tests/karma.conf.js"
+  "scripts"        : {
+    "test" : "karma start config/tests/karma.conf.js",
+    "dev"  : "gulp",
+    "build": "gulp webpack",
+    "component": "gulp component --name"
   },
-  "keywords": [
+  "keywords"       : [
     "angular",
     "webpack",
     "es6"
   ],
-  "repository": {
+  "repository"     : {
     "type": "git",
-    "url": "https://github.com/angularclass/NG6-starter.git"
+    "url" : "https://github.com/angularclass/NG6-starter.git"
   },
-  "author": "AngularClass",
-  "license": "Apache-2.0"
+  "author"         : "AngularClass",
+  "license"        : "Apache-2.0"
 }
