--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies"   : {
     "angular"          : "^1.5.0",
     "angular-ui-router": "^0.2.15",
-    "normalize.css"    : "^3.0.3"
+    "reset.css"        : "^2.0.2"
   },
   "devDependencies": {
     "angular-mocks"                 : "^1.5.0",
